Fix wrong background color in tweet screenshots when using black theme

--- a/Resources/Scripts/styles/notification.css
+++ b/Resources/Scripts/styles/notification.css
@@ -2,16 +2,8 @@
 /* General */
 /***********/
 
-body:before {
-  content: none !important;
-}
-
 body {
   overflow-y: auto !important;
-}
-
-.column {
-  background: transparent !important;
 }
 
 .scroll-styled-v::-webkit-scrollbar {
